done [selling pet section]

--- a/WebContent/O3618/o3618.css
+++ b/WebContent/O3618/o3618.css
@@ -36,6 +36,25 @@ html, body {
 	height: 700px;
 }
 
+.sc_selling_row{
+	width:100%;
+		display:inline-block;
+}
+.store_address_title, .store_name_title{
+	
+	text-align : center;
+	font-weight:bold;
+}
+
+.store_name{
+	text-align : center;
+}
+.store_name, .store_name_title, .store_address, .store_address_title{
+	display:inline-block;
+	vertical-align:middle;
+	width:30%;
+}
+
 #sc_animal_hospital {
 
 	margin: 50px 0px;
